--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
 [pycodestyle]
 [pep8]
 [flake8]
-ignore = W293,W291,E501,E261
+ignore = W293,W291,E501,E261,W503
 max-line-length = 88
 exclude = migrations,static,media
+per-file-ignores =
+    src/open_producten/conf/*:F405,F403
 
 [isort]
 combine_as_imports = true
