--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           python-version: '3.11'
           optimize-postgres: 'yes'
           pg-service: 'postgres'
-          setup-node: 'yes'
+          setup-node: 'no'
           # apt-packages: 'gettext postgresql-client'  # the default
           # npm-ci-flags: '--legacy-peer-deps' -> preferably use a .npmrc file
 
