--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           export LIBRARY_PATH=$LIBRARY_PATH:/usr/local/opt/openssl/lib/
+          pip install psycopg2-binary
           pip install -r requirements/dev.txt \
             --use-pep517 \
             --use-feature=no-binary-enable-wheel-cache
