--- a/setup.cfg
+++ b/setup.cfg
@@ -35,11 +35,11 @@ omit =
 
 [coverage:report]
 skip_covered = True
-exclude_also =
-    if (typing\.)?TYPE_CHECKING:
-    @(typing\.)?overload
-    class .*\(.*Protocol.*\):
-    @(abc\.)?abstractmethod
-    raise NotImplementedError
-    \.\.\.
-    pass
+;exclude_also =
+;    if (typing\.)?TYPE_CHECKING:
+;    @(typing\.)?overload
+;    class .*\(.*Protocol.*\):
+;    @(abc\.)?abstractmethod
+;    raise NotImplementedError
+;    \.\.\.
+;    pass
