--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [pycodestyle]
 [pep8]
 [flake8]
-ignore=W293,W291,E501,E261
-max-line-length=88
-exclude=migrations,static,media
+ignore = W293,W291,E501,E261
+max-line-length = 88
+exclude = migrations,static,media
 
 [isort]
 combine_as_imports = true
@@ -16,9 +16,9 @@ use_parentheses = True
 ensure_newline_before_comments = True
 skip = env,node_modules
 skip_glob = **/migrations/**
-known_django=django
-known_first_party=open_producten
-sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+known_django = django
+known_first_party = open_producten
+sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 [coverage:run]
 branch = True
@@ -28,7 +28,6 @@ omit =
     src/open_producten/wsgi.py
     src/open_producten/conf/local_example.py
     src/open_producten/conf/production.py
-    src/open_producten/conf/staging.py
     */migrations/*
     */tests/*
 
