--- a/.github/workflows/lint-oas.yml
+++ b/.github/workflows/lint-oas.yml
@@ -1,12 +1,12 @@
 name: lint-oas
 
 on:
-  push:
-    paths:
-      - "src/open_producten/api/v*/openapi.yaml"
-      - .github/workflows/lint-oas.yml
-    branches:
-      - '**'
+  #  push:
+  #    paths:
+  #      - "src/open_producten/api/v*/openapi.yaml"
+  #      - .github/workflows/lint-oas.yml
+  #    branches:
+  #      - '**'
   workflow_dispatch:
 
 jobs:
